plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'signing'
    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.4.1'
    id 'com.gradleup.shadow' version '9.4.0'
    id 'xyz.wagyourtail.unimined' version '1.4.23-kappa'
    id 'net.kyori.blossom' version '2.2.0'
    id 'com.diffplug.spotless' version '8.4.0'
}

private String gitOutput(List<String> args, String fallback) {
    try {
        def process = new ProcessBuilder(['git'] + args)
            .directory(rootProject.projectDir)
            .redirectErrorStream(true)
            .start()
        def stdout = process.inputStream.getText('UTF-8').trim()
        if (process.waitFor() == 0 && !stdout.isEmpty()) {
            return stdout
        }
    } catch (Exception ignored) {
        // Source archives and environments without Git use the declared fallback.
    }
    return fallback
}

private String defaultModVersion() {
    def previousTag = gitOutput(['describe', '--tags', '--abbrev=0', '--exclude=dev'], '0.0.0')
    if (previousTag.startsWith('v')) {
        previousTag = previousTag.substring(1)
    }
    return "${previousTag}+${gitOutput(['rev-parse', '--short', 'HEAD'], 'unknown')}"
}

def requiredProperty = { String name ->
    def value = project.findProperty(name)?.toString()
    if (value == null || value.trim().isEmpty()) {
        throw new GradleException("Property ${name} must be defined")
    }
    return value
}

def propertyOrDefault = { String name, String defaultValue ->
    def value = project.findProperty(name)?.toString()
    return value == null || value.trim().isEmpty() ? defaultValue : value
}

if (!gradle.startParameter.projectProperties.containsKey('mod_version')) {
    project.setProperty('mod_version', defaultModVersion())
}

def modVersion = requiredProperty('mod_version')
def rootPackage = requiredProperty('root_package')
def modId = requiredProperty('mod_id')
def modName = requiredProperty('mod_name')
def minecraftUsername = propertyOrDefault('minecraft_username', 'Developer')
def enableShadow = propertyOrDefault('enable_shadow', 'false').toBoolean()
def isCoremod = propertyOrDefault('is_coremod', 'false').toBoolean()
def coremodIncludesMod = propertyOrDefault('coremod_includes_mod', 'false').toBoolean()
def coremodPluginClassName = propertyOrDefault('coremod_plugin_class_name', '')

if (isCoremod && coremodPluginClassName.trim().isEmpty()) {
    throw new GradleException('coremod_plugin_class_name must be set when is_coremod is true')
}

version = modVersion
group = rootPackage

base {
    archivesName = modId
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    if (propertyOrDefault('generate_sources_jar', 'true').toBoolean()) {
        withSourcesJar()
    }
    if (propertyOrDefault('generate_javadocs_jar', 'true').toBoolean()) {
        withJavadocJar()
    }
}

repositories {
    flatDir {
        dirs('libs')
    }
    maven {
        url = 'https://maven.cleanroommc.com'
    }
    maven {
        url = 'https://cursemaven.com'
    }
    maven {
        url = 'https://maven.blamejared.com/'
    }
    maven {
        url = 'https://repo.spongepowered.org/maven'
    }
    maven {
        url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
    }
    mavenCentral()
    mavenLocal()
}

configurations {
    contain
    implementation.extendsFrom(contain)
    modCompileOnly
    compileOnly.extendsFrom(modCompileOnly)
    modRuntimeOnly
    runtimeOnly.extendsFrom(modRuntimeOnly)
}

String remapTaskName = enableShadow ? 'remapShadowJar' : 'remapJar'

unimined.minecraft {
    version '1.12.2'

    mappings {
        mcp('stable', '39-1.12')
    }

    cleanroom {
        loader '0.5.14-alpha'
        runs.auth.username = minecraftUsername
        runs.all {
            systemProperty('crl.dev.mixin', 'mixins.applygray.mod.json')
            systemProperty('mixin.debug.export', 'true')
            if (isCoremod) {
                systemProperty('fml.coreMods.load', coremodPluginClassName)
            }
            def extraArgs = propertyOrDefault('extra_jvm_args', '')
            if (!extraArgs.trim().isEmpty()) {
                jvmArgs += extraArgs.split { '\\s+' }.toList()
            }
        }
    }

    defaultRemapJar = false

    remap(tasks.named(enableShadow ? 'shadowJar' : 'jar').get()) {
        mixinRemap {
            enableBaseMixin()
            enableMixinExtra()
            disableRefmap()
        }
    }

    mods {
        remap(configurations.modCompileOnly)
        remap(configurations.modRuntimeOnly)
    }
}

apply from: 'dependencies.gradle'

def generatedTagsSourceDir = layout.buildDirectory.dir('generated/sources/tags/java')
def generateTagsSource = tasks.register('generateTagsSource') {
    def outputFile = generatedTagsSourceDir.map {
        it.file("${rootPackage.replace('.', '/')}/ApplyGrayInternalTags.java")
    }

    inputs.property('mod_id', modId)
    inputs.property('mod_name', modName)
    inputs.property('mod_version', modVersion)
    outputs.file(outputFile)

    doLast {
        def file = outputFile.get().asFile
        file.parentFile.mkdirs()
        file.text = """package ${rootPackage};

public final class ApplyGrayInternalTags {

    public static final String MOD_ID = \"${modId}\";
    public static final String MOD_NAME = \"${modName}\";
    public static final String VERSION = \"${modVersion}\";

    private ApplyGrayInternalTags() {
    }
}
"""
    }
}

sourceSets.main.java.srcDir(generatedTagsSourceDir)

def resourceProperties = [
    modid      : modId,
    modname    : modName,
    version    : modVersion,
    mcversion  : '1.12.2',
    mod_id     : modId,
    mod_name   : modName,
    mod_version: modVersion
]

processResources {
    inputs.properties(resourceProperties)
    filesMatching(['mcmod.info', 'pack.mcmeta']) {
        expand(resourceProperties)
    }
}

if (!enableShadow) {
    shadowJar.enabled = false
}

tasks.named('compileJava').configure {
    dependsOn(generateTagsSource)
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_25
}

tasks.named('sourcesJar').configure {
    dependsOn(generateTagsSource)
}

jar {
    archiveClassifier = 'dev'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    if (configurations.contain.size() > 0) {
        into('/') {
            from configurations.contain
        }
    }
    manifest {
        def manifestAttributes = [
            'ModType'     : 'CRL',
            'MixinConfigs': 'mixins.applygray.mod.json'
        ]
        if (isCoremod) {
            manifestAttributes['FMLCorePlugin'] = coremodPluginClassName
            if (coremodIncludesMod) {
                manifestAttributes['FMLCorePluginContainsFMLMod'] = true
            }
        }
        attributes(manifestAttributes)
    }
    finalizedBy(tasks.named(remapTaskName).get())
}

shadowJar {
    configurations = [project.configurations.shadow]
    archiveClassifier = 'shadow'
}

tasks.named(remapTaskName).configure {
    doFirst {
        logging.captureStandardOutput(LogLevel.INFO)
    }
    doLast {
        logging.captureStandardOutput(LogLevel.QUIET)
    }
}

tasks.named('compileTestJava').configure {
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_25
}

test {
    useJUnitPlatform()
    javaLauncher.set(javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    })
    if (propertyOrDefault('show_testing_output', 'false').toBoolean()) {
        testLogging {
            showStandardStreams = true
        }
    }
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
    options.charSet = 'UTF-8'
    options.docEncoding = 'UTF-8'
    options.addStringOption('Xdoclint:none', '-quiet')
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
}
